Added table at character.html

--- a/character.html
+++ b/character.html
@@ -48,7 +48,80 @@
     <div class="container">
         <div class="row">
             <div class="col-md-7">
-                <h2 class="featurette-heading">Чертоги <span class="text-muted">It'll blow your mind.</span></h2>
+                <h2 class="featurette-heading">Чертоги за датою народження <span class="text-muted">It'll blow your mind.</span></h2>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Чертог</th>
+                        <th scope="col">Дати народження</th>
+                        <th scope="col">Боги-покровители</th>
+                        <th scope="col">Дерева-талісмани</th>
+                        <th scope="col">Характеристики</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Чертог Діви</td>
+                        <td>28 серпня - 20 вересня</td>
+                        <td>Богиня Джива</td>
+                        <td>Яблуня</td>
+                        <td>Вперті, незалежні, лідерські</td>
+                      </tr>
+                      <tr>
+                        <td>Чертог Вепра</td>
+                        <td>20 вересня - 12 жовтня</td>
+                        <td>Бог Рамхат</td>
+                        <td>Груша</td>
+                        <td>Свавільні, вперті, боротьба за успіх</td>
+                      </tr>
+                      <tr>
+                        <td>Чертог Щуки</td>
+                        <td>12 жовтня - 3 листопада</td>
+                        <td>Богиня народжувати і зливу</td>
+                        <td>Немає вказаного</td>
+                        <td>Адаптивні, комфортні в будь-яких умовах</td>
+                      </tr>
+                      <tr>
+                        <td>Чертог Лебедя</td>
+                        <td>3 листопада - 24 листопада</td>
+                        <td>Богиня долі Макошь</td>
+                        <td>Сосна</td>
+                        <td>Гординя, успішні, пророцтва</td>
+                      </tr>
+                      <tr>
+                        <td>Чертог Змія</td>
+                        <td>24 листопада - 17 грудня</td>
+                        <td>Богиня Семаргл, липа</td>
+                        <td>Немає вказаного</td>
+                        <td>Егоїсти, самопожертва, успішні</td>
+                      </tr>
+                      <tr>
+                        <td>Чертог Ворона</td>
+                        <td>17 грудня - 8 січня</td>
+                        <td>Бог-покровитель Коляда</td>
+                        <td>Модрина</td>
+                        <td>Цілителі, веселі, розсудливі</td>
+                      </tr>
+                      <tr>
+                        <td>Чертог Медведя</td>
+                        <td>8 січня - 1 лютого</td>
+                        <td>Бог Сварог, бук і малина</td>
+                        <td>Немає
+                      </tr>
+                    </tbody>
+                </table>
+            </div>
+            <hr class="featurette-divider">
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <h2 class="featurette-heading">Опис чертогів</h2>
             </div>
         </div>
         <hr class="featurette-divider">
