--- a/main_page.html
+++ b/main_page.html
@@ -69,6 +69,29 @@
           </div>
         <hr class="featurette-divider">
     </div>
+    <div class="container">
+         <div class="col-lg-4">
+             <form>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlSelect1">Example select</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>Обереги</option>
+                  <option>Руни</option>
+                  <option>Чертоги</option>
+                  <option>Інше</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1">Повідомлення</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            </form>
+         </div>
+    </div>
 </main>
 
 
