--- a/runes.html
+++ b/runes.html
@@ -36,6 +36,7 @@
                 <li><a href="amulets.html">Обереги</a></li>
                 <li class="active"><a href="runes.html">Руни</a></li>
                 <li><a href="character.html">Чертоги</a></li>
+                <li><a href="contact.html">Контакти</a></li>
               </ul>
             </div>
           </div>
