--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="main_page.html">Головна</a></li>
-                <li class="active"><a href="amulets.html">Обереги</a></li>
+                <li><a href="amulets.html">Обереги</a></li>
                 <li><a href="runes.html">Руни</a></li>
                 <li><a href="character.html">Чертоги</a></li>
-                <li><a href="contact.html">Контакти</a></li>
+                <li class="active"><a href="contact.html">Контакти</a></li>
               </ul>
             </div>
           </div>
@@ -46,23 +46,31 @@
 
 
 <main>
+    <hr class="featurette-divider">
     <div class="container">
-        <div class="row">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">Обереги <span class="text-muted">It'll blow your mind.</span></h2>
-            </div>
-        </div>
-        <hr class="featurette-divider">
-        <div class="row featurette">
-            <div class="col-md-7">
-              <p class="lead"><b>Боговник</b> є уособленням Вічної сили і заступництва Світлих Богів людини, яка стала на шлях духовного розвитку і досконалості. Мандала, із зображенням цього символу допомагає людині усвідомити Взаємопроникнення та Єдність Чотири першоелементи.</p>
-            </div>
-            <div class="col-md-5">
-              <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="assets/img/ob1.jpg" data-holder-rendered="true">
-            </div>
-        </div>
-        <hr class="featurette-divider">
+         <div class="col-lg-4">
+             <form>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlSelect1">Example select</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>Обереги</option>
+                  <option>Руни</option>
+                  <option>Чертоги</option>
+                  <option>Інше</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1">Повідомлення</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            </form>
+         </div>
     </div>
+    <hr class="featurette-divider">
 </main>
 
 
