--- a/runes.html
+++ b/runes.html
@@ -37,6 +37,7 @@
                 <li class="active"><a href="runes.html">Руни</a></li>
                 <li><a href="character.html">Чертоги</a></li>
                 <li><a href="contact.html">Контакти</a></li>
+                <li><a href="support_ua.html">Підтримати проект</a></li>
               </ul>
             </div>
           </div>
