--- a/runes.html
+++ b/runes.html
@@ -22,17 +22,16 @@
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <img src="assets/img/logo.png" alt="logo" href="main_page.html">
+                <a href="main_page.html"><img src="assets/img/logo_tr.png" alt="logo"></a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="main_page.html">Головна</a></li>
                 <li><a href="amulets.html">Обереги</a></li>
                 <li class="active"><a href="runes.html">Руни</a></li>
                 <li><a href="character.html">Чертоги</a></li>
