--- a/character.html
+++ b/character.html
@@ -8,17 +8,17 @@
         <meta content="" name="keywords">
         <title>Runes and amulets</title>
 
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" type="image/png">
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Template Main CSS File -->
-    <link href="assets/css/my_style.css" rel="stylesheet">
-</head>
+        <!-- Favicons -->
+        <link href="assets/img/favicon.png" rel="icon" type="image/png">
+        <!-- Bootstrap core CSS -->
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Template Main CSS File -->
+        <link href="assets/css/my_style.css" rel="stylesheet">
+    </head>
 <body>
 
-<div class="navbar-wrapper">
-    <div class="container">
+<header>
+    <div class="navbar-wrapper">
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
@@ -34,7 +34,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="amulets.html">Обереги</a></li>
                 <li><a href="runes.html">Руни</a></li>
-                <li class="active"><a href="character.html">Чертоги</a></li>
+                <li  class="active"><a href="character.html">Чертоги</a></li>
                 <li><a href="contact.html">Контакти</a></li>
                 <li><a href="support_ua.html">Підтримати проект</a></li>
               </ul>
@@ -42,8 +42,7 @@
           </div>
         </nav>
     </div>
-</div>
-
+</header>
 
 <main>
     <div class="container">
@@ -147,14 +146,13 @@
     </div>
 </main>
 
-
 <footer>
 
 </footer>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="assets/js/bootstrap.min.js"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
