add new 3 tables

--- a/runes.html
+++ b/runes.html
@@ -8,17 +8,19 @@
         <meta content="" name="keywords">
         <title>Runes and amulets</title>
 
-        <!-- Favicons -->
-        <link href="assets/img/favicon.png" rel="icon" type="image/png">
-        <!-- Bootstrap core CSS -->
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-        <!-- Template Main CSS File -->
-        <link href="assets/css/my_style.css" rel="stylesheet">
-    </head>
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon" type="image/png">
+    <!-- Bootstrap core CSS -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="assets/css/my_style.css" rel="stylesheet">
+    <!-- Runes CSS File -->
+    <link href="assets/css/runes.css" rel="stylesheet">
+</head>
 <body>
 
-<header>
-    <div class="navbar-wrapper">
+<div class="navbar-wrapper">
+    <div class="container">
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
@@ -33,7 +35,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="amulets.html">Обереги</a></li>
-                <li  class="active"><a href="runes.html">Руни</a></li>
+                <li class="active"><a href="runes.html">Руни</a></li>
                 <li><a href="character.html">Чертоги</a></li>
                 <li><a href="contact.html">Контакти</a></li>
                 <li><a href="support_ua.html">Підтримати проект</a></li>
@@ -42,7 +44,8 @@
           </div>
         </nav>
     </div>
-</header>
+</div>
+
 
 <main>
     <div class="container">
@@ -62,6 +65,227 @@
             </div>
         </div>
         <hr class="featurette-divider">
+
+
+        <ol>
+          <li>Ісландський - Ættir Эттир Фрейра и Фрейи</li>
+            <div class="row">
+                <table class="table">
+                <thead>
+                  <tr>
+                    <th>Руна</th>
+                    <th>Назва</th>
+                    <th>Переклад</th>
+                    <th>Значення</th>
+                    <th>Транскрипція</th>
+                  </tr>
+                </thead>
+
+        <tbody>
+          <tr>
+            <td class="symbols_size">&#5792;</td>
+            <td>Fehu (Феху)</td>
+            <td>«скот»</td>
+            <td>Власність, володіння, багатство, майно.</td>
+            <td>f, v</td>
+          </tr>
+
+          <tr>
+            <td class="symbols_size">&#5794;</td>
+            <td>Uruz (Уруз)</td>
+            <td>«зубр»</td>
+            <td>Примітивна сила, пристрасть.</td>
+            <td>u</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5798;</td>
+            <td>Þurisaz (Турисаз)</td>
+            <td>«Турс, Велетень»</td>
+            <td>Велетень, гігант, Торн, йотун, троль, шип, закон, захист, виклик та випробування, сила.</td>
+            <td>þ</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5800;</td>
+            <td>Ansuz</td>
+            <td>«бог»</td>
+            <td>Руна поезії та магії, одкровень, натхнення, руна знань та несподіваних відкриттів та зустрічей, мудрості.</td>
+            <td>a</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5809;</td>
+            <td>Raido (Райдо)</td>
+            <td>«шлях»</td>
+            <td>Дорога, шлях, подорож, еволюція, розвиток</td>
+            <td>r</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5810;</td>
+            <td>Kenaz (Кеназ)</td>
+            <td>«смолоскип»</td>
+            <td>Знання, творчість, натхнення, вогонь життя, енергія життя, пристрасть, керована сила.</td>
+            <td>k</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5815;</td>
+            <td>Gebo (Гебо)</td>
+            <td>«дар»</td>
+            <td>Руна єдності протилежностей, дару, руна партнерства та свободи.</td>
+            <td>g, γ</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5817;</td>
+            <td>Wunjo (Вуньо)</td>
+            <td>«радість»</td>
+            <td>Руна виконання мрії, радості, везіння, процвітання та удачі, щастя.</td>
+            <td>w</td>
+          </tr>
+        </tbody>
+    </table>
+          <li>Норвезька - Ættir Эттир Хеймдаля</li>
+                <table class="table">
+                <thead>
+                  <tr>
+                    <th>Руна</th>
+                    <th>Назва</th>
+                    <th>Переклад</th>
+                    <th>Значення</th>
+                    <th>Транскрипція</th>
+                  </tr>
+                </thead>
+            <tr>
+            <td class="symbols_size">&#5818;</td>
+            <td>Hagalaz (Хагалаз)</td>
+            <td>«град»</td>
+            <td>Руна руйнівної енергії, грози та граду, які знищують все на своєму шляху, щоб народилося нове, для особистісного та духовного зростання.</td>
+            <td>h</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5822;</td>
+            <td>Nauthiz (Наутиз)</td>
+            <td>«нужда»</td>
+            <td>Символізує потребу, кайдани і примус, брак чогось і важкий час.</td>
+            <td>n</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5825;</td>
+            <td>Isaz (Иса)</td>
+            <td>«лід»</td>
+            <td>Стихійна руна льоду та холоду, творчості.</td>
+            <td>i</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5827;</td>
+            <td>Jera (Йера)</td>
+            <td>«год, врожай»</td>
+            <td>Руна врожаю, перебіг часу. Йера - руна досягнення та результату.</td>
+            <td>j</td>
+          </tr>
+            <tr>
+            <td class="symbols_size">&#5858;</td>
+            <td>Eihwaz (Эйваз)</td>
+            <td>«град»</td>
+            <td>Руна подорожей поза тілом та спілкування з Нижнім Світом, смерті, руна оборони та захисту.</td>
+            <td>é (ih-wh)</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5832;</td>
+            <td>Perthro (Перт)</td>
+            <td>«кладезь пам'яти»</td>
+            <td>Руна долі та жіночого характеру.</td>
+            <td>p</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5833;</td>
+            <td>Algiz (Альгиз)</td>
+            <td>«лось»</td>
+            <td>Руна захисту, захищеності, заступництва Богів.</td>
+            <td>-R (-z)</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5834;</td>
+            <td>Sowilo (Совило)</td>
+            <td>«Сонце»</td>
+            <td>Руна перемоги, могутності, цілісності, творчої енергії.</td>
+            <td>s</td>
+          </tr>
+        </tbody>
+    </table>
+          <li>Німецька - Ættir Эттир Тюра</li>
+             <table class="table">
+                <thead>
+                  <tr>
+                    <th>Руна</th>
+                    <th>Назва</th>
+                    <th>Переклад</th>
+                    <th>Значення</th>
+                    <th>Транскрипція</th>
+                  </tr>
+                </thead>
+            <tr>
+            <td class="symbols_size">&#5839;</td>
+            <td>Tiwaz (Тейваз)</td>
+            <td>«Тюр»</td>
+            <td>Руна Воїна Духа, присвячена вона богу війни та правосуддя Тюру, руна перемоги.</td>
+            <td>t</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5842;</td>
+            <td>Berkana (Беркана)</td>
+            <td>«береза»</td>
+            <td>Руна богинь та жіночого початку. Руна реінкарнації.</td>
+            <td>b</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5846;</td>
+            <td>Ehwaz (Эваз)</td>
+            <td>«лошадь»</td>
+            <td>Руна змін та рухів.</td>
+            <td>e</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5847;</td>
+            <td>Mannaz (Манназ)</td>
+            <td>«человек»</td>
+            <td>Руна справжнього свого «Я», думки, розуму, розуміння.</td>
+            <td>m</td>
+          </tr>
+            <tr>
+            <td class="symbols_size">&#5850;</td>
+            <td>Laguz (Лагуз)</td>
+            <td>«озеро»</td>
+            <td>Руна руху, інтуїції, вказівки шляху та заступництва богів.</td>
+            <td>l</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5852;</td>
+            <td>Ingwaz (Ингуз)</td>
+            <td>«Ингви»</td>
+            <td>Символізує родючість, урожай, успіх.</td>
+            <td>(Фрейр)	ŋ</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5854;</td>
+            <td>Dagaz (Дагаз)</td>
+            <td>«день»</td>
+            <td>Ця руна означає духовний і матеріальний спадок, символізує собою рід, сім'ю, будинок, власність, Батьківщину, традиції та звичаї предків.</td>
+            <td>d, ð</td>
+          </tr>
+          <tr>
+            <td class="symbols_size">&#5855;</td>
+            <td>Othala (Одал)</td>
+            <td>«наследие»</td>
+            <td>Це означає радість, силу, здоров'я, благополуччя. Головними її значеннями є прорив та процвітання.</td>
+            <td>o</td>
+          </tr>
+        </tbody>
+    </table>
+    </div>
+    </ol>
+
+</div>
+
+
+
 </main>
 
 
@@ -69,9 +293,9 @@
 
 </footer>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="assets/js/bootstrap.min.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
