--- a/runes.html
+++ b/runes.html
@@ -16,7 +16,7 @@
     <link href="assets/css/my_style.css" rel="stylesheet">
 </head>
 <body>
-
+<section id="background_section" data-speed="2" data-type="background">
 <header>
     <div class="navbar-wrapper">
         <nav class="navbar navbar-inverse navbar-static-top">
@@ -51,7 +51,11 @@
                 <h2 class="featurette-heading">Руни <span class="text-muted">It'll blow your mind.</span></h2>
             </div>
         </div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/07PlggWJwLM?start=59" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="row">
+            <div class="col-md-7">
+                <iframe width="80%" height="300px" src="https://www.youtube.com/embed/07PlggWJwLM?start=59" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
         <hr class="featurette-divider">
         <div class="row featurette">
             <div class="col-md-12">
@@ -68,7 +72,7 @@
 <footer>
 
 </footer>
-
+</section>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
