--- a/main_page.html
+++ b/main_page.html
@@ -16,7 +16,7 @@
     <link href="assets/css/my_style.css" rel="stylesheet">
 </head>
 <body>
-
+<section id="background_section" data-speed="8" data-type="background">
 <header>
     <div class="navbar-wrapper">
         <nav class="navbar navbar-inverse navbar-static-top">
@@ -75,7 +75,7 @@
 <footer>
 
 </footer>
-
+</section>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
