--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,70 @@
 <main>
     <div class="container">
         <hr class="featurette-divider">
-         <div class="col-lg-4">
+            <div class="col-lg-5">
+            <form>
+              <!-- Email input -->
+              <div class="form-group">
+                <label class="form-label" for="form2Example1">Email адреса</label>
+                <input type="email" id="form2Example1" class="form-control" />
+              </div>
+
+              <!-- Password input -->
+              <div class="form-group">
+                <label class="form-label" for="form2Example2">Пароль</label>
+                <input type="password" id="form2Example2" class="form-control" />
+              </div>
+
+              <!-- 2 column grid layout for inline styling -->
+              <div class="form-group">
+                <div class="col d-flex justify-content-center">
+                  <!-- Checkbox -->
+                  <!--<div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+                    <label class="form-check-label" for="form2Example31"> Remember me </label>
+                  </div>-->
+                </div>
+
+                <div class="col">
+                  <!-- Simple link -->
+                  <a href="#!">Забули пароль?</a>
+                </div>
+              </div>
+
+              <!-- Submit button -->
+              <button type="button" class="btn btn-primary btn-block">Увійти</button>
+
+              <!-- Register buttons -->
+              <div class="text-center">
+                <p>Хочеш доєднатися до нашого ком'юнити? <a href="#!">Реєструйся</a></p>
+                <!--<p>or sign up with:</p>
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-facebook-f"></i>
+                </button>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-google"></i>
+                </button>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-twitter"></i>
+                </button>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-github"></i>
+                </button>-->
+              </div>
+            </form>
+        </div>
+        <div class="col-lg-2"><p class="or-sep">Або</p></div>
+            <div class="col-lg-5">
              <form>
               <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
+                <label for="exampleFormControlInput1">Email адреса</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="form-group">
-                <label for="exampleFormControlSelect1">Example select</label>
+                <label for="exampleFormControlSelect1">Тема</label>
                 <select class="form-control" id="exampleFormControlSelect1">
                   <option>Обереги</option>
                   <option>Руни</option>
