--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Template Main CSS File -->
     <link href="assets/css/my_style.css" rel="stylesheet">
+    <!-- Pass validation -->
+    <script src="assets/js/valid.js"></script>
 </head>
 <body>
 <section id="background_section" data-speed="2" data-type="background">
@@ -51,16 +53,15 @@
             <form>
               <!-- Email input -->
               <div class="form-group">
-                <label class="form-label" for="form2Example1">Email адреса</label>
-                <input type="email" id="form2Example1" class="form-control" />
+                <label class="form-label" for="login">Логин</label>
+                <input type="email" id="login" class="form-control" />
               </div>
 
               <!-- Password input -->
               <div class="form-group">
-                <label class="form-label" for="form2Example2">Пароль</label>
-                <input type="password" id="form2Example2" class="form-control" />
+                <label class="form-label" for="pass">Пароль</label>
+                <input type="password" id="pass" class="form-control" />
               </div>
-
               <!-- 2 column grid layout for inline styling -->
               <div class="form-group">
                 <div class="col d-flex justify-content-center">
@@ -72,13 +73,15 @@
                 </div>
 
                 <div class="col">
-                  <!-- Simple link -->
-                  <a href="#!">Забули пароль?</a>
+                    <label class="form-label" for="pass_show">Показати пароль</label>
+                    <input type="checkbox" id="pass_show" onclick="myfunction()">
+                    <!-- Simple link -->
+                    <a href="#!" id="pass_forget">Забули пароль?</a>
                 </div>
               </div>
 
               <!-- Submit button -->
-              <button type="button" class="btn btn-primary btn-block">Увійти</button>
+              <button type="submit" class="btn btn-primary btn-block" onclick="validate()">Увійти</button>
 
               <!-- Register buttons -->
               <div class="text-center">
@@ -105,11 +108,11 @@
         <div class="col-lg-2"><p class="or-sep">Або</p></div>
             <div class="col-lg-5">
              <form>
-              <div class="form-group">
+              <!--<div class="form-group">
                 <label for="exampleFormControlInput1">Email адреса</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-              <div class="form-group">
+              </div>-->
+              <!--<div class="form-group">
                 <label for="exampleFormControlSelect1">Тема</label>
                 <select class="form-control" id="exampleFormControlSelect1">
                   <option>Обереги</option>
@@ -117,11 +120,17 @@
                   <option>Чертоги</option>
                   <option>Інше</option>
                 </select>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlTextarea1">Повідомлення</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
+              </div>-->
+                <div class="commentBox form-group">
+                    <label for="commentDisplay">Коментарі</label>
+                    <div id="commentDisplay"></div>
+
+
+                    <textarea class="form-control" id="commentInput" placeholder="Пишіть коментарі..."></textarea>
+                    <button class="btn btn-primary btn-block" id="submitComment">Запостити</button>
+                </div>
+                <div class="commentDisplay form-group">
+                </div>
             </form>
          </div>
         <hr class="featurette-divider">
@@ -132,6 +141,8 @@
 
 </footer>
 </section>
+<!-- Comment js -->
+<script src="assets/js/comment.js"></script>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
