--- a/runes.html
+++ b/runes.html
@@ -66,7 +66,15 @@
         </div>
         <hr class="featurette-divider">
 
+        <img  src="assets/img/runes/Runic_letters_elder_futhark.png" alt="Your Image" usemap="#image-map" width="500" height="400" style="display: block; margin-left: auto; margin-right: auto;">
 
+        <map name="image-map">
+          <area shape="rect" coords="x1,y1,x2,y2" href="page1.html" alt="Area 1">
+          <area shape="rect" coords="x,y,radius" href="page2.html" alt="Area 2">
+          <area shape="rect" coords="x1,y1,x2,y2,x3,y3,..." href="page3.html" alt="Area 3">
+        </map>
+
+        <a href="#element1"><img  src="assets/img/runes/Runic_letters_elder_futhark.png" alt="Generic placeholder image" width="500" height="400" style="display: block; margin-left: auto; margin-right: auto;"></a>
         <ol>
           <li>Ісландський - Ættir Эттир Фрейра и Фрейи</li>
             <div class="row">
@@ -82,7 +90,7 @@
                 </thead>
 
         <tbody>
-          <tr>
+          <tr id="element1">
             <td class="symbols_size">&#5792;</td>
             <td>Fehu (Феху)</td>
             <td>«скот»</td>
@@ -281,6 +289,8 @@
     </table>
     </div>
     </ol>
+
+<script src="assets/js/runes.js"></script>
 
 </div>
 
